Major update and bug remove id card reload problem

--- a/Random quote/index.html
+++ b/Random quote/index.html
@@ -23,10 +23,10 @@
 <div    id="cen">
 <div id="main">
 <div id="uppermain">
-<i  class="fas fa-quote-left fa-1x fa-pull-left "></i>
-  <p   id="quote"></p>
-  <i class=" fas fa-quote-right fa-1x fa-pull-right "></i></br>
-   <p id="writer"></p>
+    <i  class="fas fa-quote-left fa-1x fa-pull-left "></i>
+    <p   id="quote" style="display: inline">HAVE A NICE DAY</p>
+    <i class="fas fa-quote-right fa-1x" style="display: inline"></i></br>
+   <p id="writer">-BAPPADITYA BERA</p>
    </div>
 <div id="mainbtn">
  <a id="change" class="btn btn-primary btn-lg b" onclick="CreateRGB()">NEW QUOTE</a></div>
